FS/KP - #186 - Added CSS to align Managed-Items correctly.

--- a/src/main/webapp/scripts/css/main.css
+++ b/src/main/webapp/scripts/css/main.css
@@ -120,6 +120,10 @@ table {
     color: indianred;
 }
 
+tr {
+    vertical-align: top;
+
+}
 .order-table > tbody > tr > td {
     border-bottom: 1px solid lightskyblue;
     vertical-align: top;
